--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ function MM_swapImage() { //v3.0
 </script>
 </head>
 
-<body onLoad="MM_preloadImages('imagenes/primer.jpg','imagenes/LEYE1.jpg')">
+<body onLoad="MM_preloadImages('imagenes/primer.jpg','imagenes/LEYE1.jpg','imagenes/beni2.JPG')">
 
 <div data-role="page" id="principal" data-theme="b">
 <div data-role="header" data-add-back-btn="true" data-back-btn-text="Regresar"  data-back-btn-theme="b">
@@ -244,7 +244,8 @@ function MM_swapImage() { //v3.0
 <div>
   <p>Existieron causas aparentes y causas que no lo fueron, o simplemente excusas, pero todos los aspectos mencionados fueron causas de la Batalla de Puebla; era claro que la República de México se encontraba sumida en crisis y tenía una deuda con Francia, España e Inglaterra; deuda que por la crisis, Benito Juárez, presidente de la época decidió no pagar por el momento y solicitar una tregua de 2 años para pagarla.</p>
   <p>Esta decisión de no pagar por el momento, disgustó a los acreedores de la deuda y decidieron agruparse para invadir a la Republica de México y cobrarse sus deudas, adicionalmente, cada uno de estos 3 países tenían intereses mas allá de la deuda; tenían intereses económicos, mineros y de expansión de sus negocios, también de colonización de territorios.</p>
-  <center><p><img src="imagenes/BENI.jpg" width="400" height="396" alt="image"></p></center>
+ <center> <p><a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image22','','imagenes/beni2.JPG',1)"><img src="imagenes/BENI.jpg" width="50%" height="50%" id="Image22"></a></p></center>
+  <center><p>&nbsp;</p></center>
   <div data-role="content" align="center">
 <div><center>
   <div data-role="controlgroup" data-type="horizontal">
